--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                         <div class="cf-inner">
                             <div class="inner">
                                 <div class="dec-icon">
-                                    <img src="assets/design.png" alt="">
+                                    <img src="assets/design.png" alt="lakshan">
                                 </div>
                                 <p> Develop any kind of web application either to conduct your business activities or to promote your business.</p>
                             </div>
@@ -373,7 +373,7 @@
                         <div class="cf-inner">
                             <div class="inner">
                                 <div class="dec-icon">
-                                    <img src="assets/application.png" alt="">
+                                    <img src="assets/application.png" alt="lakshan">
                                 </div>
                                 <p> Create Modern Enterprise Application that reliable and consistency with awesome ideas.</p>
                             </div>
@@ -407,7 +407,7 @@
                         <div class="cf-inner">
                             <div class="inner">
                                 <div class="dec-icon">
-                                    <img src="assets/design.png" alt="">
+                                    <img src="assets/design.png" alt="lakshan">
                                 </div>
                                 <p>Design is the main thing of a application. Pay more attention to the UI / UX part of the Software with eyecatching  colors.</p>
                             </div>
@@ -441,7 +441,7 @@
                         <div class="cf-inner">
                             <div class="inner">
                                 <div class="dec-icon">
-                                    <img src="assets/cloud-data.png" alt="">
+                                    <img src="assets/cloud-data.png" alt="lakshan">
                                 </div>
                                 <p> Discover the Next Generation of the human world.</p>
                             </div>
@@ -475,7 +475,7 @@
                         <div class="cf-inner">
                             <div class="inner">
                                 <div class="dec-icon">
-                                    <img src="assets/web-design.png" alt="">
+                                    <img src="assets/web-design.png" alt="lakshan">
                                 </div>
                                 <p> The best designer can change everything in the artwork. I think graphic designers are like a magician in this field. </p>
                             </div>
@@ -484,37 +484,38 @@
                 </div>
             </div>
 
+            <div class="col-md-6">
+                <div class="content-inner fl-wrap">
 
 
-                <div>
-                    <img width="128"  src="assets/web-design.png" alt="lakshan">
-                    <h5> Graphic Designing</h5>
-                    <p>
-                        The best designer <br>
-                        can change everything <br>
-                        in the artwork. <br>
-                        I think graphic <br>
-                        designers are like <br>
-                        a magician in this <br>
-                        field.
+                    <div class="content-front">
 
-                    </p>
+                        <div class="cf-inner">
+                            <!--                <div class="bg "  data-bg="images/services/1.jpg"></div>-->
+                            <div class="overlay"></div>
+
+                            <div class="inner">
+                                <h2>Software Development</h2>
+                                <!--                           <h4>Start eating better</h4>-->
+                            </div>
+                            <div class="serv-num">06.</div>
+                        </div>
+
+                    </div>
+
+
+                    <div class="content-back">
+                        <div class="cf-inner">
+                            <div class="inner">
+                                <div class="dec-icon">
+                                    <img src="assets/coding (1).png" alt="lakshan">
+                                </div>
+                                <p> Software Development Services means the design, development,maintenance,implementation. </p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-
-                <div>
-                    <img width="128"  src="assets/coding (1).png" alt="lakshan">
-                    <h5> Software Development</h5>
-                    <p>
-                        Software Development <br>
-                        Services means the <br>
-                        design, development, <br>
-                        maintenance, <br>
-                        implementation
-
-                    </p>
-                </div>
-
-
+            </div>
 
         </section>
 
