--- a/index.html
+++ b/index.html
@@ -521,6 +521,11 @@
                 </div>
             </div>
 
+            <div class="dot ball">
+                <img src="assets/dot ball(3).png">
+                <img src="assets/dot ball (2).png""/>
+            </div>
+
         </section>
 
 <!--        project section-->
