--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
 
             <div class="dot ball">
                 <img src="assets/dot ball(3).png">
-                <img src="assets/dot ball (2).png""/>
+                <img src="assets/dot ball (2).png"/>
             </div>
 
         </section>
