--- a/index.html
+++ b/index.html
@@ -317,14 +317,14 @@
 
             <div id="box1">
                 <img src="assets/design.png">
-                <h4 style="width: 15vw;">web design</h4>
+                <h4 style="width: 8vw;">web design</h4>
                 <h3>Develop any kind of web application either to conduct your business activities or to promote your business.</h3>
             </div>
 
 
             <div id="box2">
                 <img src="assets/application.png">
-                <h4 style="width: 11vw;">Enterprise Application</h4>
+                <h4 style="width: 16vw;">Enterprise Application</h4>
                 <h3>Create Modern Enterprise Application that reliable and consistency with awesome ideas.</h3>
             </div>
 
@@ -345,17 +345,18 @@
 
             <div  id="box5">
                 <img src="assets/web-design.png">
-                <h4 style="width: 8vw;">Graphic Designer</h4>
+                <h4 style="width: 12vw;">Graphic Designer</h4>
                 <h3>The best designer can change everything in the artwork. I think graphic designers are like a magician in this field.</h3>
             </div>
 
 
             <div  id="box6">
                 <img src="assets/coding (1).png">
-                <h4 style="width: 15vw;">Software Development</h4>
+                <h4 style="width: 18vw;">Software Development</h4>
                 <h3>Software Development Services means the design, development,maintenance,implementation.</h3>
             </div>
 
+            <div>
 <!--            <div>-->
 <!--                <h1>My Expertise</h1>-->
 <!--                <h2> What Can I Do For Your Needs</h2>-->
@@ -570,6 +571,7 @@
 <!--                <img src="assets/dot ball(3).png">-->
 <!--                <img src="assets/dot ball (2).png"/>-->
 <!--            </div>-->
+            </div>
 
         </section>
 
