--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
         <section id="expertise">
 
             <h5>My Expertise</h5>
-            <h1>What I DO</h1>
+            <h1>What Can I Do For Your Needs</h1>
 
 
             <div id="box1">
@@ -356,7 +356,7 @@
                 <h3>Software Development Services means the design, development,maintenance,implementation.</h3>
             </div>
 
-            <div>
+            <ul>
 <!--            <div>-->
 <!--                <h1>My Expertise</h1>-->
 <!--                <h2> What Can I Do For Your Needs</h2>-->
@@ -571,7 +571,7 @@
 <!--                <img src="assets/dot ball(3).png">-->
 <!--                <img src="assets/dot ball (2).png"/>-->
 <!--            </div>-->
-            </div>
+            </ul>
 
         </section>
 
