--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 
             <div  id="box3">
                 <img src="assets/design.png">
-                <h4 style="width: 12vw;">UI / UX Designing</h4>
+                <h4 style="width: 15vw;">UI / UX Designing</h4>
                 <h3>Design is the main thing of a application. Pay more attention to the UI / UX part of the Software with eyecatching colors.</h3>
             </div>
 
@@ -577,23 +577,26 @@
 
 <!--        project section-->
         <section id="projects">
-            <hgroup>
+            <h5>Projects and Assignments</h5>
+            <h1>Recent Works That I Do</h1>
+            <h1>Showing you the most valuable services available from us and the projects and Assignments  I have created</h1>
 
-                <h1>Projects and Assignments<bfn id = "Project"></bfn></h1>
+            <h2>10</h2>
+            <h3>90%</h3>
 
+            <div></div>
 
-                <h2>Recent Works That I Do</h2>
-                <p>
-                    Showing you the most valuable services available from us and the<br>
-                    projects and Assignments  I have created
-                </p>
-                <ul>
-                    <button>Project and Assigments</button>
-                    <li>A - <a href="assignments/23780.zip" download="download pdf1">Download project File</a></li>
+            <h4>Complete Projects</h4>
+            <h6>Positive Feedbacks</h6>
 
-                </ul>
-            </hgroup>
-            <nav></nav>
+            <img id="section7Project1" src="assets/Project1.png">
+            <img id="section7Project2" src="assets/Project2.png">
+            <img id="section7Project3" src="assets/Project3.png">
+
+            <img id="section7LeftArrow" src="assets/Section7-LeftArrow.png">
+            <img id="section7RightArrow" src="assets/Section7-RightArrow.png">
+
+            <h7><a href="assests/pages/assignmentPage.html" style="color: white">Projects and Assignments</a></h7>
 
         </section>
 
