--- a/index.html
+++ b/index.html
@@ -579,19 +579,15 @@
         <section id="projects">
             <h5>Projects and Assignments</h5>
             <h1>Recent Works That I Do</h1>
-            <h1>Showing you the most valuable services available from us and the projects and Assignments  I have created</h1>
 
-            <h2>10</h2>
-            <h3>90%</h3>
+            <h2>Showing you the most valuable services available from us and the projects and Assignments  I have created</h2>
 
-            <div></div>
+<!--            <div></div>-->
 
-            <h4>Complete Projects</h4>
-            <h6>Positive Feedbacks</h6>
 
-            <img id="section7Project1" src="assets/Project1.png">
+            <img id="section7Project1" src="assets/Project3.png">
             <img id="section7Project2" src="assets/Project2.png">
-            <img id="section7Project3" src="assets/Project3.png">
+            <img id="section7Project3" src="assets/Project1.png">
 
             <img id="section7LeftArrow" src="assets/Section7-LeftArrow.png">
             <img id="section7RightArrow" src="assets/Section7-RightArrow.png">
