--- a/index.html
+++ b/index.html
@@ -597,21 +597,18 @@
         </section>
 
 <!--        blog section-->
-        <section>
-            <hgroup>
-                <h1>Blog<bfn id = "Blog"></bfn></h1>
-                <h2>My General Life</h2>
-                <img width="250"  src="assets/IMG-20230128-WA0033.jpg" alt="lakshan">
-                <img width="250"  src="assets/FB_IMG_1679567163402.jpg" alt="lakshan">
-                <img width="250"  src="assets/FB_IMG_1682071177610.jpg" alt="lakshan">
-                <img width="400"  src="assets/IMG-20230426-WA0008.jpg" alt="lakshan">
-                <img width="250"  src="assets/FB_IMG_1648882089113.jpg" alt="lakshan">
-                <img width="400"  src="assets/FB_IMG_1679567150004.jpg" alt="lakshan">
-            </hgroup>
-            <article>
+        <section id="Blog">
 
-            </article>
-            <section></section>
+                <h5>Blog</h5>
+                <h1>My General Life</h1>
+
+                <img id="section8Img1"  src="assets/IMG-20230128-WA0033.jpg" alt="lakshan">
+                <img id="section8Img2" src="assets/FB_IMG_1679567163402.jpg" alt="lakshan">
+                <img id="section8Img3"  src="assets/FB_IMG_1682071177610.jpg" alt="lakshan">
+                <img id="section8Img4" src="assets/IMG-20230426-WA0008.jpg" alt="lakshan">
+                <img id="section8Img5"  src="assets/FB_IMG_1648882089113.jpg" alt="lakshan">
+                <img id="section8Img6"  src="assets/FB_IMG_1679567150004.jpg" alt="lakshan">
+
         </section>
 
 <!--        contact section-->
