--- a/index.html
+++ b/index.html
@@ -611,8 +611,41 @@
 
         </section>
 
-<!--        contact section-->
+        <!--        contact section-->
+
         <section id="contactMe">
+
+            <h5>Contact Me</h5>
+            <h1>Have You Any Question ?</h1>
+
+            <div id="section10div1">
+
+                <img src="assets/Material Icons_e61d(0)_512.png">
+                <a style="width: 9vw" href="tel:+94713988628">+94713988628</a>
+
+            </div>
+
+
+            <div id="section10div2">
+
+                <img src="assets/FontAwesome_f041(3)_512.png">
+                <a style="width: 9vw" href="https://www.google.com/maps/place/5%C2%B057'41.3%22N+80%C2%B033'16.6%22E/@5.9614775,80.5520362,17z/data=!3m1!4b1!4m4!3m3!8m2!3d5.9614722!4d80.5546111?entry=ttu" target="_blank"> Matara, Sri lanka</a>
+
+            </div>
+
+
+            <div id="section10div3">
+
+                <img src="assets/FontAwesome_f0e0(2)_512.png">
+                <a style="width: 12vw" href="mailto:lakshanrashmika16302@gmail.com">lakshanrashmika16302@gmail.com</a>
+
+            </div>
+
+
+        </section>
+
+        <!--        contact section-->
+        <section>
             <hgroup>
                 <h1>Contact Me<bfn id = "Contact Me"></bfn></h1>
                 <p>
