--- a/index.html
+++ b/index.html
@@ -613,112 +613,86 @@
 
         <!--        contact section-->
 
-        <section id="contactMe">
+        <section class="contact-section">
 
-            <h5>Contact Me</h5>
-            <h1>Have You Any Question ?</h1>
+            <dfn id="contact-section"></dfn>
 
-            <div id="section10div1">
+            <h4>Follow Me</h4>
 
-                <img src="assets/Material Icons_e61d(0)_512.png">
-                <h3> <a style="width: 9vw" href="tel:+94713988628">+94713988628</a></h3>
-            </div>
+            <h1>Contact Me.</h1>
 
+            <!--            line-->
+            <hr>
 
-            <div id="section10div2">
+            <section>
+                <address>
+                    <div>
+                        <!--                                <img src="assets/images/call-img.png" alt="call-icon">-->
+                        <div><i id="phone" class="fa-solid fa-phone"></i></div>
+                        <div>
+                            <h4>Call me</h4>
+                            <a href="tel:+94713988628">+(94)713988628</a>
+                        </div>
+                    </div>
 
-                <img src="assets/FontAwesome_f041(3)_512.png">
-                <h3> <a style="width: 9vw" href="https://www.google.com/maps/place/5%C2%B057'41.3%22N+80%C2%B033'16.6%22E/@5.9614775,80.5520362,17z/data=!3m1!4b1!4m4!3m3!8m2!3d5.9614722!4d80.5546111?entry=ttu" target="_blank"> Matara, Sri lanka</a></h3>
+                    <div>
+                        <!--                                <img src="assets/images/email-img.png" alt="email-icon">-->
+                        <div><i class="fa-solid fa-envelope"></i></div>
+                        <div>
+                            <h4>Email</h4>
+                            <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=new"
+                               target="_blank">lakshanrashmika16302@gmail.com</a>
+                        </div>
+                    </div>
 
-
-            </div>
-
-
-            <div id="section10div3">
-
-                <img src="assets/FontAwesome_f0e0(2)_512.png">
-                <h3><a style="width: 12vw" href="mailto:lakshanrashmika16302@gmail.com">lakshanrashmika16302@gmail.com</a></h3>
-            </div>
-
-
-        </section>
-
-        <!--        contact section-->
-        <section>
-            <hgroup>
-                <h1>Contact Me<bfn id = "Contact Me"></bfn></h1>
-                <p>
-
-                <h4>Contact Number</h4>
-                <a href="tel:+94713988628" target="blank">
-                    <img width="85"  src="assets/Material Icons_e61d(0)_512.png" alt="lakshan">
-                </a>
-                <a href="tel:+94713988628">+94713988628</a>
-
-
-                <h4>Email</h4>
-                <a href="mailto:lakshanrashmika16302@gmail.com" target="blank">
-                    <img width="85"  src="assets/FontAwesome_f0e0(2)_512.png" alt="lakshan">
-                </a>
-
-                <p>
-                    <a href="mailto:lakshanrashmika16302@gmail.com">lakshanrashmika16302@gmail.com</a>
-                </p>
-
-                <h4>Location</h4>
-                <a href="https://www.google.com/maps/place/5%C2%B057'41.3%22N+80%C2%B033'16.6%22E/@5.9614775,80.5520362,17z/data=!3m1!4b1!4m4!3m3!8m2!3d5.9614722!4d80.5546111?entry=ttu" target="blank">
-                    <img width="85"  src="assets/FontAwesome_f041(3)_512.png" alt="lakshan">
-                </a>
-
-                <p>
-                    <a href="https://www.google.com/maps/place/5%C2%B057'41.3%22N+80%C2%B033'16.6%22E/@5.9614775,80.5520362,17z/data=!3m1!4b1!4m4!3m3!8m2!3d5.9614722!4d80.5546111?entry=ttu" target="_blank"> Matara, Sri lanka</a>
-                </p>
-
-                <form action="Contact Me">
-                    <fieldset>
-                        <legend>Contact Me</legend>
-                        <label for="User Id"> Your Name :</label>
-                        <input id="User Id" type="UserId" required placeholder="Enter Your Name">
-
-                        <label for="UserName"> Email :</label>
-                        <input id="UserName" type="email" required placeholder="Enter Your Email">
-                        <br>
-                        <br>
-
-                        <label for="Massage">Massage :</label>
-                        <textarea id="Massage" type="Massage" required placeholder="Enter Your Massage"></textarea>
-                        <br>
-                        <br>
+                    <div>
+                        <!--                                <img src="assets/images/location-img.png" alt="location-icon">-->
+                        <div><i class="fa-solid fa-location-dot"></i></div>
 
                         <div>
-                            Follow Me :
-                            <a href="https://www.facebook.com/" target="blank">
-                                <img width="32"  src="assets/icons8-facebook-144.png" alt="This is a WEBP image">
-                            </a>
-
-                            <a href="https://www.youtube.com/" target="blank">
-                                <img width="32"  src="assets/icons8-instagram-144.png" alt="This is a WEBP image">
-                            </a>
-
-                            <a href="https://www.linkedin.com/feed/" target="blank">
-                                <img width="32"  src="assets/icons8-linkedin-144.png" alt="This is a WEBP image">
-                            </a>
-
+                            <h4>Location</h4>
+                            <a href="https://www.google.com/maps/place/5%C2%B057'41.3%22N+80%C2%B033'16.6%22E/@5.9614775,80.5520362,17z/data=!3m1!4b1!4m4!3m3!8m2!3d5.9614722!4d80.5546111?entry=ttu" target="_blank" target="_blank">Matara, Sri lanka</a>
                         </div>
+                    </div>
 
-                        <button type="reset"> Clear All</button>
-                        <button type="submit" formaction="SUBMIT">Submit</button>
+                    <h4>Let’s content </h4>
 
-                    </fieldset>
-                </form>
+                    <p>Please fill out the form on this
+                        section to contact with <br> me.Or call
+                        between 9.00 a.m and 8.00 p.m ET,Monday <br> thought Friday...
+                    </p>
 
-                <img width="1341" height="600" src="assets/Frame 3.png" alt="lakshan">
+                </address>
 
+                <!--            form section-->
+                <aside>
+                    <form>
 
-                </p>
-            </hgroup>
-            <adderss></adderss>
+                        <fieldset>
+
+                            <!--                                <legend>Clients Data</legend>-->
+
+                            <label for="name">Name</label><br>
+                            <input id="name" type="text" required> <br>
+
+                            <label for="address">Address</label><br>
+                            <input id="address" type="text" required><br>
+
+                            <label for="title">Title</label><br>
+                            <input id="title" type="text" required><br>
+
+                            <label for="message">Message</label><br>
+                            <textarea required id="message" name="area" cols="30" rows="5"></textarea>
+                            <br><br>
+
+                            <button type="submit" onclick="myAlertFunc()">Send Message</button>
+                        </fieldset>
+
+                    </form>
+                </aside>
+            </section>
         </section>
+
 
     </main>
 </head>
