--- a/index.html
+++ b/index.html
@@ -621,15 +621,13 @@
 
             <h1>Contact Me.</h1>
 
-            <!--            line-->
-            <hr>
-
             <section>
                 <address>
                     <div>
                         <!--                                <img src="assets/images/call-img.png" alt="call-icon">-->
                         <div><i id="phone" class="fa-solid fa-phone"></i></div>
                         <div>
+                            <img src="assets/call.png"/>
                             <h4>Call me</h4>
                             <a href="tel:+94713988628">+(94)713988628</a>
                         </div>
@@ -639,6 +637,8 @@
                         <!--                                <img src="assets/images/email-img.png" alt="email-icon">-->
                         <div><i class="fa-solid fa-envelope"></i></div>
                         <div>
+
+                            <img src="assets/gmail.png"/>
                             <h4>Email</h4>
                             <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=new"
                                target="_blank">lakshanrashmika16302@gmail.com</a>
@@ -650,18 +650,12 @@
                         <div><i class="fa-solid fa-location-dot"></i></div>
 
                         <div>
+
+                            <img src="assets/Location.png"/>
                             <h4>Location</h4>
                             <a href="https://www.google.com/maps/place/5%C2%B057'41.3%22N+80%C2%B033'16.6%22E/@5.9614775,80.5520362,17z/data=!3m1!4b1!4m4!3m3!8m2!3d5.9614722!4d80.5546111?entry=ttu" target="_blank" target="_blank">Matara, Sri lanka</a>
                         </div>
                     </div>
-
-                    <h4>Let’s content </h4>
-
-                    <p>Please fill out the form on this
-                        section to contact with <br> me.Or call
-                        between 9.00 a.m and 8.00 p.m ET,Monday <br> thought Friday...
-                    </p>
-
                 </address>
 
                 <!--            form section-->
