--- a/index.html
+++ b/index.html
@@ -617,14 +617,11 @@
 
             <dfn id="contact-section"></dfn>
 
-            <h4>Follow Me</h4>
-
-            <h1>Contact Me.</h1>
+            <h1>Contact Me</h1>
 
             <section>
                 <address>
                     <div>
-                        <!--                                <img src="assets/images/call-img.png" alt="call-icon">-->
                         <div><i id="phone" class="fa-solid fa-phone"></i></div>
                         <div>
                             <img src="assets/call.png"/>
@@ -634,7 +631,6 @@
                     </div>
 
                     <div>
-                        <!--                                <img src="assets/images/email-img.png" alt="email-icon">-->
                         <div><i class="fa-solid fa-envelope"></i></div>
                         <div>
 
@@ -646,7 +642,6 @@
                     </div>
 
                     <div>
-                        <!--                                <img src="assets/images/location-img.png" alt="location-icon">-->
                         <div><i class="fa-solid fa-location-dot"></i></div>
 
                         <div>
