--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <li><a href="#education">Education</a></li>
                 <li><a href="#expertise">Expertise</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="#contactMe" style="color: white;">Contact Me</a></li>
+                <li><a href="#contact-section" style="color: white;">Contact Me</a></li>
             </ul>
         </nav>
     </header>
