--- a/index.html
+++ b/index.html
@@ -469,7 +469,69 @@
     </main>
 </head>
 
-<footer></footer>
+<footer>
+    <section>
+        <div>
+            <h1>About Me</h1>
+            <p>Software Engineer. Simultaneously studying a degree at London Met, with a focus on frames, is expected to be completed in 2026.</p>
+            <img src="assets/footer logo.png" />
+        </div>
+
+        <hr>
+
+        <div>
+            <h1>IMPORTANT LINKS</h1>
+
+            <div>
+                <img src="assets/link.png"/>
+                <img src="assets/link.png"/>
+                <img src="assets/link.png"/>
+                <img src="assets/link.png"/>
+                <img src="assets/link.png"/>
+            </div>
+
+            <nav>
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#aboutMe">About Me</a></li>
+                    <li><a href="#education">Education</a></li>
+                    <li><a href="#expertise">Expertise</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                </ul>
+            </nav>
+
+        </div>
+
+        <hr>
+
+        <div>
+            <h1>Contact Me</h1>
+
+            <h2>Lakshan Rashmika</h2>
+            <h2>lak_rashmika</h2>
+            <h2>Lakshan Rashmika</h2>
+
+            <ul>
+
+                <a href="https://www.facebook.com/lakshan.rashmika.925" target="blank">
+                    <img data-aos="fade-up" data-aos-delay="2000" data-aos-duration="800" id="facebooklogo" src="assets/facebook.png">
+                </a>
+
+                <a href="https://www.instagram.com/lak_rashmika/" target="blank">
+                    <img data-aos="fade-up" data-aos-delay="2000" data-aos-duration="800" id="instergramlogo" src="assets/instagram.png">
+                </a>
+
+                <a href="https://www.linkedin.com/in/lakshan-rashmika-4a7566249/" target="blank">
+                    <img data-aos="fade-up" data-aos-delay="2000" data-aos-duration="800" id="linkedInlogo" src="assets/linkedin.png">
+                </a>
+
+            </ul>
+
+        </div>
+
+    </section>
+
+</footer>
 
     
 </body>
