--- a/index.html
+++ b/index.html
@@ -314,6 +314,8 @@
 
             <h5>My Expertise</h5>
             <h1>What Can I Do For Your Needs</h1>
+            <p>Some understanding of software application concept, design,  evaluation and maintenance. To create software solutions for end users,
+                software engineers have little understanding of their programming  languages</p>
 
 
             <div id="box1">
