--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
 <!--        project section-->
         <section id="projects">
             <h3>Projects and Assignments</h3>
-            <h1>Recent Works That I Do</h1>
+            <h1>Projects work I do</h1>
 
             <h2>Showing you the most valuable services available from us and the projects and Assignments  I have created</h2>
 
