--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
                     </div>
 
-                    <strong>good vibes only !</strong><br><br><br><br>
+<!--                    <strong>good vibes only !</strong><br><br><br><br>-->
 
                     <div>
                         <h6 data-aos="fade-up" data-aos-delay="2000" data-aos-duration="800"><a href="#aboutMe" style="color: white; text-decoration: none">About Me</a></h6>
