--- a/assignments/CSS/Transitions/Case1/index.html
+++ b/assignments/CSS/Transitions/Case1/index.html
@@ -21,9 +21,11 @@
             position: absolute;
             padding-top: 7px;
             box-shadow: #000000 0px 4px 12px;
+            border-radius: 20px 20px 20px 20px;
         }
 
         section>div>h7{
+            font-size: 30px;
             color: white;
         }
 
