--- a/assignments/CSS/Transitions/Case1/index.html
+++ b/assignments/CSS/Transitions/Case1/index.html
@@ -6,9 +6,9 @@
 
     <style>
 
-        section{
-            position: relative;
-        }
+        /*section{*/
+        /*    position: relative;*/
+        /*}*/
 
         section>div{
             transition: 2s;
@@ -37,31 +37,37 @@
         }
 
         section>div:nth-child(1){
-            top: 5px;
+            position: relative;
+            top: 15px;
             left: -350px;
         }
 
         section>div:nth-child(2){
-            top: 130px;
+            position: relative;
+            top: 65px;
             left: -350px;
         }
 
         section>div:nth-child(3){
-            top: 250px;
+            position: relative;
+            top: 110px;
             left: -350px;
         }
 
         section>div:nth-child(4){
-            top: 380px;
+            position: relative;
+            top: 155px;
             left: -350px;
         }
 
         section>div:nth-child(5){
-            top: 510px;
+            position: relative;
+            top: 200px;
             left: -350px;
         }
 
         section>div:hover{
+            position: relative;
             left: -100px;
             transition: 2s;
         }
