--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Lakshan R</title>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width initial-scale=1">
     <link rel="icon" href="HTML/icons8-l-64%20(1).png">
     <meta name="keywords" content="IJSE,GDSE,HTML,ABCD,Lakshan">
     <meta name="description" content="Nice to meet you, Lakshan Rashmika! As a software engineer, you can generate a placeholde">
@@ -12,6 +13,7 @@
     <meta name="robots" content="index,follow">
     <meta name="canonical" href = "http://lakshanrashmika.rf.gd/?i=1/">
 
+    <link rel="stylesheet" href="assets/font/fontawesome-free-6.4.2-web/css/all.css">
     <link rel="stylesheet" href="assets/css/necolas.github.io_normalize.css_8.0.1_normalize.css">
     <link rel="stylesheet" href="assets/css/styles.css">
 
@@ -21,7 +23,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Borel&family=Signika&display=swap" rel="stylesheet">
 
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Borel&family=Signika&display=swap" rel="stylesheet">
 
 </head>
 
