--- a/index.html
+++ b/index.html
@@ -33,20 +33,25 @@
 <body>
 
 <!--        sectioning root-->
-    <header>
-        <img src="assets/images/Frame%2014%20(2).png" style="width: 10%"/>
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#features">Features</a></li>
-                <li><a href="#aboutMe">About Me</a></li>
-                <li><a href="#education">Education</a></li>
-                <li><a href="#expertise">Expertise</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact-section" style="color: white;">Contact Me</a></li>
-            </ul>
-        </nav>
-    </header>
+<header>
+    <!--        header icon-->
+    <div>
+        <img src="assets/images/Frame%2014%20(2).png" alt="header icon in hear">
+    </div>
+    <!--        navigation-->
+    <nav>
+        <div>
+            <menu>
+                <li><a href="#home-section">Home</a></li>
+                <li><a href="#about-section"></i>About</a></li>
+                <li><a href="#expertise-section">Expertise</a></li>
+                <li><a href="#project-section">Projects</a></li>
+                <li><a href="#education-section">Education</a></li>
+                <li><a href="#contact-section">Contact</a></li>
+            </menu>
+        </div>
+    </nav>
+</header>
 
     <main>
 
