--- a/index.html
+++ b/index.html
@@ -55,14 +55,15 @@
 
     <main>
 
-<!--        header section-->
+        <!--        home section-->
         <section class="home">
+            <dfn id="home-section"></dfn>
             <div>
-                <img src="assets/images/Frame%202.png" alt="lakshan">
+                <img src="assets/images/home/Frame 9.png" alt="lakshan"/>
             </div>
 
             <div>
-                <img src="assets/images/Frame%202%20(1).png" alt="myImage">
+                <img src="assets/images/home/myImage.png" alt="myImage"/>
             </div>
 
             <div>
@@ -74,16 +75,16 @@
                         <div data-aos="zoom-in" data-aos-delay="1700" data-aos-duration="800"></div>
                         <div data-aos="zoom-in" data-aos-delay="1700" data-aos-duration="800" style="left: 14.7vw; width: 1.5vw;"></div>
 
-                        <img src="assets/images/icomoon.png"/>
+                        <img src="assets/images/home/icomoon_e64a(0)_64.png">
                         <p>
                             I am currently studying for a software engineer<br>
-                             diploma at IJSE and I am also studying other subjects.<br>
-                             I am twenty one years old
+                            diploma at IJSE and I am also studying other subjects.<br>
+                            I am twenty one years old
                         </p>
 
                     </div>
 
-<!--                    <strong>good vibes only !</strong><br><br><br><br>-->
+                    <!--                    <strong>good vibes only !</strong><br><br><br><br>-->
 
                     <div>
                         <h6 data-aos="fade-up" data-aos-delay="2000" data-aos-duration="800"><a href="#aboutMe" style="color: white; text-decoration: none">About Me</a></h6>
@@ -91,41 +92,42 @@
 
                 </aside>
 
+
                 <ul>
 
                     <a href="https://www.linkedin.com/in/lakshan-rashmika-4a7566249/" target="blank">
-                        <img data-aos="fade-up" data-aos-delay="2000" data-aos-duration="800" id="linkedIn" src="assets/images/FontAwesome_f0e1(1)_48.png">
+                        <img data-aos="fade-up" data-aos-delay="2000" data-aos-duration="800" id="linkedIn" src="assets/images/home/linkedin.png" >
                     </a>
 
                     <a href="https://www.instagram.com/lak_rashmika/" target="blank">
-                        <img data-aos="fade-up" data-aos-delay="2000" data-aos-duration="800" id="instergram" src="assets/images/Entypo_f32d(2)_48.png">
+                        <img data-aos="fade-up" data-aos-delay="2000" data-aos-duration="800" id="instergram" src="assets/images/home/instagram.png" >
                     </a>
 
                     <a href="https://www.facebook.com/lakshan.rashmika.925" target="blank">
-                        <img data-aos="fade-up" data-aos-delay="2000" data-aos-duration="800" id="facebook" src="assets/images/themify_e741(0)_48.png">
+                        <img data-aos="fade-up" data-aos-delay="2000" data-aos-duration="800" id="facebook" src="assets/images/home/facebook.png" >
                     </a>
 
                     <a href="https://discord.com/register" target="blank">
-                        <img data-aos="fade-up" data-aos-delay="2000" data-aos-duration="800" id="discord" src="assets/images/icons8-discord-48%201.png">
+                        <img data-aos="fade-up" data-aos-delay="2000" data-aos-duration="800" id="discord" src="assets/images/home/git%20hub.png" >
                     </a>
 
                 </ul>
             </div>
 
             <div>
-                <img src="assets/images/triangle.png" alt="taiangle">
+                <img src="assets/images/home/triangle1.png"  alt="taiangle">
             </div>
 
             <div>
-                <img src="assets/images/rawma.png" alt="taiangle">
+                <img src="assets/images/home/rawma.png"  alt="taiangle">
             </div>
 
             <div>
-                <img src="assets/images/triangle%20(2).png" alt="taiangle">
+                <img src="assets/images/home/triangle2.png" alt="taiangle">
             </div>
 
             <div>
-                <img src="assets/images/plus.png" alt="taiangle">
+                <img src="assets/images/home/pluse.png" alt="taiangle">
             </div>
 
 
