--- a/index.html
+++ b/index.html
@@ -134,11 +134,12 @@
         </section>
 
 
-<!--        about me section-->
+        <!--        about me section-->
 
         <section id="aboutMe">
+            <dfn id="about-section"></dfn>
 
-            <img width="400" id="section3MyImage" src="assets/images/myImage.png" alt="lakshan">
+            <img  id="section4MyImage2" src="assets/images/about me/IMG-20230128-WA0033 3.png">
 
             <div>
 
@@ -146,24 +147,20 @@
 
                 <h1>I Can Develop That Help People</h1>
 
-                <h3> Hello I am Lakshan Rashmika I began my Software engineer life in 2021. I've spent most of my waking hours for the last
+                <h3>Hello I am Lakshan Rashmika I began my Software engineer life in 2021. I've spent most of my waking hours for the last
                     years designing, programming and operating web sites. I have acquired the skills and knowledge necessary to make your project a success.
                     I enjoy every step of the design process, from discussion and collaboration.</h3>
 
-
             </div>
 
-                <ul>
-                    <li>Name : Lakshan Rashmika</li>
-                    <li>Address : Matara,Sri Lanka</li>
-                    <li>Age : 21 Years </li>
-                    <li>Email : lakshanrashmika16302@gmail.com</li>
-                    <li>Contact : +94 71 3988 628 </li>
-                    <li>Linked in : Lakshan Rashmika </li>
-                </ul>
+            <div>
+                <img src="assets/images/about me/Frame 10.png" />
 
+                <img src="assets/images/about me/Frame 11.png" />
+            </div>
 
         </section>
+
 
 <!--        education section-->
         <section id="education">
